--- a/demo/css/demo.css
+++ b/demo/css/demo.css
@@ -1,3 +1,7 @@
+label {
+    margin-left: 10px;
+}
+
 .title {
     font-size: 20px;
     display: inline;
@@ -19,6 +23,18 @@
     min-height: 200px;
 }
 
-#mode-container {
+#options-container {
+    height: 40px;
+}
+
+#call-str {
+    border: 1px solid #ddd;
+    padding: 2px;
+    float: right;
+    font-size: .9em;
+    font-weight: bold;
+}
+
+.json-sample {
     float: right;
 }
